safepoint练习